Bug 702131: Fix overprint in additive spaces.

We should only enter CompatibleOverprint blend mode if we
are in an subtractive space. This stops pdf14 trying to honour
drawn_comps even in additive spaces.